--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <img class="main" src="https://pbs.twimg.com/media/D7dBfozUEAEkItp.jpg">
         <p>♡ liked by itscodenation and others </p>
-        <p><span class="name"></span>: Felt cute. Might delete later. #fluff</p>
+        <p><span class="name"></span>: I'm him. #fn</p>
 
     </body>
 </html>
